cluster/dreamsim/stage/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: dreamsim-stage
  name: frontend
  labels:
    app: frontend
    stage: stage
    service: dreamsim
spec:
  selector:
    app: frontend
    stage: stage
    service: dreamsim
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dreamsim-stage
  labels:
    app: frontend
    stage: stage
    service: dreamsim
spec:
  selector:
    matchLabels:
      app: frontend
      stage: stage
      service: dreamsim
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
        stage: stage
        service: dreamsim
    spec:
      containers:
        - name: frontend
          image: eu.gcr.io/dreamsim-ru/dreamsim-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            periodSeconds: 60
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            periodSeconds: 300
