cluster/dreamsim/stage/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: dreamsim-stage
  name: postgres
  labels:
    app: postgres
    stage: stage
    service: dreamsim
spec:
  selector:
    app: postgres
    stage: stage
    service: dreamsim
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dreamsim-stage
  labels:
    app: postgres
    stage: stage
    service: dreamsim
spec:
  selector:
    matchLabels:
      app: postgres
      stage: stage
      service: dreamsim
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: postgres
        stage: stage
        service: dreamsim
    spec:
      containers:
        - name: postgres
          image: eu.gcr.io/dreamsim-ru/dreamsim-postgres
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -h postgres -d $POSTGRES_DB -c 'SELECT 1'"
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -h postgres -d $POSTGRES_DB -c 'SELECT 1'"
            initialDelaySeconds: 45
            timeoutSeconds: 2
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          hostPath:
            path: /var/lib/postgresql/data
