cluster/dreamsim/stage/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: dreamsim-stage
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-stage
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
  labels:
    stage: stage
    service: dreamsim
spec:
  rules:
    - host: drsim.ru
      http:
        paths:
          - path: /api
            backend:
              serviceName: app
              servicePort: 80
    - host: www.drsim.ru
      http:
        paths:
          - path: /api
            backend:
              serviceName: app
              servicePort: 80
    - host: drsim.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
    - host: www.drsim.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
  tls:
    - hosts:
        - drsim.ru
        - www.drsim.ru
      secretName: dreamsim-stage-tls
